--- a/style.css
+++ b/style.css
@@ -78,3 +78,24 @@ blockquote {
   color: #cccccc;
   font-style: italic;
 }
+
+.retro-elements {
+  text-align: center;
+  margin: 30px 0;
+  font-family: "Courier New", Courier, monospace;
+  color: #33ff00;
+}
+
+.visitor-counter {
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  font-size: 0.9em;
+  margin-top: 20px;
+  color: #999;
+  font-style: italic;
+}
+
+pre {
+  overflow-x: auto;
+  color: #33ff00;
+}
